# predsched

./: Cargo.toml  README.md  build.rs  plot
src/: algs.rs  instance.rs  lib.rs  main.rs  pred.rs  rtnorm.rs  sample.rs  tables.rs
truncnorm/: rtnorm.cpp  rtnorm.hpp
