[package]
name = "predsched"
version = "0.1.0"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simplelog = "0.9"
num-integer = "0.1.44"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"