[package]
name = "predsched"
version = "0.1.0"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simplelog = "0.9"
num-integer = "0.1.44"
rand = "0.8.1"
rand_distr = "0.4.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
indicatif = {version = "0.15.0", features = ["rayon"]} 
rayon = "1.5.0"
itertools-num = "0.1.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.37"
float-cmp = "0.8.0"
libc = "0.2.82"
num-traits = "0.2.14"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

